# Cirtesu_blackbox_recovery_stonefish

./: README.md
src/bluerov_simulation_blackbox/: CMakeLists.txt  package.xml
src/bluerov_simulation_blackbox/config/predefined_motions/: bravo_uji.yaml
src/bluerov_simulation_blackbox/config/ros_control/: bluerov_ros_control.yaml
src/bluerov_simulation_blackbox/config/rviz/: bluerov_blackbox.rviz  girona500_uji_real_cameras.rviz
src/bluerov_simulation_blackbox/data/falcon/: battery.mtl  camera.mtl  camera_dome.mtl  camera_support.mtl  center_light.mtl  falcon_arm_base.mtl  frame.mtl  frame_left.mtl  frame_right.mtl  front_left_duct.mtl  front_right_duct.mtl  left_light.mtl  left_light_glass.mtl  lower_hull.mtl  lower_hull_fin4.mtl  propeller.mtl  rear_left_duct.mtl  rear_right_duct.mtl  right_light.mtl  under_frame.mtl  upper_hull.mtl  z_duct.mtl
src/bluerov_simulation_blackbox/launch/: bluerov_pipe.launch  cirtesu_description.launch  movement.launch
src/bluerov_simulation_blackbox/launch/core/: girona1000_base.launch.core  girona500_udg_base.launch.core  (+1 more)
src/bluerov_simulation_blackbox/scenarios/: bluerov_pipe.scn  girona1000_simulation.scn  girona1000_stereo_simulation.scn  girona500_udg_simulation.scn  girona500_uji_simulation.scn  girona500_uji_simulation_poster.scn  girona500_uji_stereo_simulation.scn
src/bluerov_simulation_blackbox/src/: GUI.py  ardusim_patch.py  gripper_sim.py  odom_to_tf.py  server_sim.py  teleop.py
src/bluerov_simulation_blackbox/urdf/: blackbox.urdf  blackbox.xacro  cirtesu.urdf.xacro  config.xacro  urdf.xacro
(+21 files in other folders)
