<?xml version="1.0"?>
<package format="2">
  <name>bluerov_simulation_blackbox</name>
  <version>0.0.0</version>
  <description>The bluerov_simulation package</description>

  <maintainer email="roger.pi@udg.edu">Roger Pi</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend> roscpp </depend>
  <depend>rosparam </depend>

</package>
